Practica02SIC/obj/Debug/sicestParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\jesus\Desktop\Práctica 06 - Símbolos y Expresiones\Practica02SIC\sicest.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Practica02SIC {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class sicestParser : Parser {
	public const int
		START=1, INDICE=2, COMA=3, END=4, TIPOBYTE=5, TIPOWORD=6, RESB=7, RESW=8, 
		FINL=9, CODOP=10, RSUB=11, WS=12, CBYTE=13, XBYTE=14, NUMHEX=15, NUMHEXMIN=16, 
		NUM=17, ID=18;
	public const int
		RULE_programa = 0, RULE_inicio = 1, RULE_fin = 2, RULE_entrada = 3, RULE_proposiciones = 4, 
		RULE_proposicion = 5, RULE_instruccion = 6, RULE_directiva = 7, RULE_tipodirectiva = 8, 
		RULE_etiqueta = 9, RULE_opinstruccion = 10, RULE_indexado = 11, RULE_opdirectiva = 12, 
		RULE_num = 13, RULE_byte = 14;
	public static readonly string[] ruleNames = {
		"programa", "inicio", "fin", "entrada", "proposiciones", "proposicion", 
		"instruccion", "directiva", "tipodirectiva", "etiqueta", "opinstruccion", 
		"indexado", "opdirectiva", "num", "byte"
	};

	private static readonly string[] _LiteralNames = {
		null, "'START'", "'X'", "','", "'END'", "'BYTE'", "'WORD'", "'RESB'", 
		"'RESW'", null, null, "'RSUB'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "START", "INDICE", "COMA", "END", "TIPOBYTE", "TIPOWORD", "RESB", 
		"RESW", "FINL", "CODOP", "RSUB", "WS", "CBYTE", "XBYTE", "NUMHEX", "NUMHEXMIN", 
		"NUM", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "sicest.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public sicestParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramaContext : ParserRuleContext {
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
	 
		public ProgramaContext() { }
		public virtual void CopyFrom(ProgramaContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class InicioProgramaContext : ProgramaContext {
		public InicioContext inicio() {
			return GetRuleContext<InicioContext>(0);
		}
		public ProposicionesContext proposiciones() {
			return GetRuleContext<ProposicionesContext>(0);
		}
		public FinContext fin() {
			return GetRuleContext<FinContext>(0);
		}
		public InicioProgramaContext(ProgramaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterInicioPrograma(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitInicioPrograma(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicioPrograma(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_programa);
		try {
			_localctx = new InicioProgramaContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 30; inicio();
			State = 31; proposiciones(0);
			State = 32; fin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InicioContext : ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
	 
		public InicioContext() { }
		public virtual void CopyFrom(InicioContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EtiqiniContext : InicioContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode START() { return GetToken(sicestParser.START, 0); }
		public NumContext num() {
			return GetRuleContext<NumContext>(0);
		}
		public ITerminalNode FINL() { return GetToken(sicestParser.FINL, 0); }
		public EtiqiniContext(InicioContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterEtiqini(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitEtiqini(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEtiqini(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreposContext : InicioContext {
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public PreposContext(InicioContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterPrepos(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitPrepos(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrepos(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_inicio);
		try {
			State = 40;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new EtiqiniContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 34; etiqueta();
				State = 35; Match(START);
				State = 36; num();
				State = 37; Match(FINL);
				}
				break;

			case 2:
				_localctx = new PreposContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 39; proposicion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FinContext : ParserRuleContext {
		public ITerminalNode END() { return GetToken(sicestParser.END, 0); }
		public EntradaContext entrada() {
			return GetRuleContext<EntradaContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(sicestParser.Eof, 0); }
		public FinContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fin; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterFin(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitFin(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFin(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FinContext fin() {
		FinContext _localctx = new FinContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_fin);
		try {
			State = 48;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 42; Match(END);
				State = 43; entrada();
				State = 44; Match(Eof);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 46; Match(END);
				State = 47; entrada();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntradaContext : ParserRuleContext {
		public EntradaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entrada; } }
	 
		public EntradaContext() { }
		public virtual void CopyFrom(EntradaContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EndIDContext : EntradaContext {
		public ITerminalNode ID() { return GetToken(sicestParser.ID, 0); }
		public EndIDContext(EntradaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterEndID(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitEndID(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEndID(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NoEndIDContext : EntradaContext {
		public NoEndIDContext(EntradaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterNoEndID(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitNoEndID(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNoEndID(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntradaContext entrada() {
		EntradaContext _localctx = new EntradaContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_entrada);
		try {
			State = 52;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case ID:
				_localctx = new EndIDContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 50; Match(ID);
				}
				break;
			case Eof:
				_localctx = new NoEndIDContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProposicionesContext : ParserRuleContext {
		public ProposicionesContext proposiciones() {
			return GetRuleContext<ProposicionesContext>(0);
		}
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public ProposicionesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposiciones; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterProposiciones(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitProposiciones(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposiciones(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionesContext proposiciones() {
		return proposiciones(0);
	}

	private ProposicionesContext proposiciones(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		ProposicionesContext _localctx = new ProposicionesContext(_ctx, _parentState);
		ProposicionesContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_proposiciones, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 55; proposicion();
			}
			_ctx.stop = _input.Lt(-1);
			State = 61;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ProposicionesContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_proposiciones);
					State = 57;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 58; proposicion();
					}
					} 
				}
				State = 63;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ProposicionContext : ParserRuleContext {
		public InstruccionContext instruccion() {
			return GetRuleContext<InstruccionContext>(0);
		}
		public ITerminalNode FINL() { return GetToken(sicestParser.FINL, 0); }
		public DirectivaContext directiva() {
			return GetRuleContext<DirectivaContext>(0);
		}
		public ProposicionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposicion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterProposicion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitProposicion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposicion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionContext proposicion() {
		ProposicionContext _localctx = new ProposicionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_proposicion);
		try {
			State = 70;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; instruccion();
				State = 65; Match(FINL);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67; directiva();
				State = 68; Match(FINL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionContext : ParserRuleContext {
		public InstruccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion; } }
	 
		public InstruccionContext() { }
		public virtual void CopyFrom(InstruccionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ErrorCodOpContext : InstruccionContext {
		public ITerminalNode[] CODOP() { return GetTokens(sicestParser.CODOP); }
		public ITerminalNode CODOP(int i) {
			return GetToken(sicestParser.CODOP, i);
		}
		public OpinstruccionContext opinstruccion() {
			return GetRuleContext<OpinstruccionContext>(0);
		}
		public ErrorCodOpContext(InstruccionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterErrorCodOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitErrorCodOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitErrorCodOp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ErrorRsubContext : InstruccionContext {
		public ITerminalNode[] RSUB() { return GetTokens(sicestParser.RSUB); }
		public ITerminalNode RSUB(int i) {
			return GetToken(sicestParser.RSUB, i);
		}
		public ErrorRsubContext(InstruccionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterErrorRsub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitErrorRsub(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitErrorRsub(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class InstrnormalContext : InstruccionContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode CODOP() { return GetToken(sicestParser.CODOP, 0); }
		public OpinstruccionContext opinstruccion() {
			return GetRuleContext<OpinstruccionContext>(0);
		}
		public InstrnormalContext(InstruccionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterInstrnormal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitInstrnormal(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstrnormal(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class InstrrsubContext : InstruccionContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode RSUB() { return GetToken(sicestParser.RSUB, 0); }
		public InstrrsubContext(InstruccionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterInstrrsub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitInstrrsub(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstrrsub(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionContext instruccion() {
		InstruccionContext _localctx = new InstruccionContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_instruccion);
		try {
			State = 84;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new ErrorCodOpContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 72; Match(CODOP);
				State = 73; Match(CODOP);
				State = 74; opinstruccion();
				}
				break;

			case 2:
				_localctx = new ErrorRsubContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 75; Match(RSUB);
				State = 76; Match(RSUB);
				}
				break;

			case 3:
				_localctx = new InstrnormalContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 77; etiqueta();
				State = 78; Match(CODOP);
				State = 79; opinstruccion();
				}
				break;

			case 4:
				_localctx = new InstrrsubContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 81; etiqueta();
				State = 82; Match(RSUB);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectivaContext : ParserRuleContext {
		public DirectivaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directiva; } }
	 
		public DirectivaContext() { }
		public virtual void CopyFrom(DirectivaContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ErrorDobleByteContext : DirectivaContext {
		public ITerminalNode[] TIPOBYTE() { return GetTokens(sicestParser.TIPOBYTE); }
		public ITerminalNode TIPOBYTE(int i) {
			return GetToken(sicestParser.TIPOBYTE, i);
		}
		public ByteContext @byte() {
			return GetRuleContext<ByteContext>(0);
		}
		public ErrorDobleByteContext(DirectivaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterErrorDobleByte(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitErrorDobleByte(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitErrorDobleByte(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ErrorDobleDirectivaContext : DirectivaContext {
		public TipodirectivaContext[] tipodirectiva() {
			return GetRuleContexts<TipodirectivaContext>();
		}
		public TipodirectivaContext tipodirectiva(int i) {
			return GetRuleContext<TipodirectivaContext>(i);
		}
		public OpdirectivaContext opdirectiva() {
			return GetRuleContext<OpdirectivaContext>(0);
		}
		public ErrorDobleDirectivaContext(DirectivaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterErrorDobleDirectiva(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitErrorDobleDirectiva(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitErrorDobleDirectiva(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EsBYTEContext : DirectivaContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode TIPOBYTE() { return GetToken(sicestParser.TIPOBYTE, 0); }
		public ByteContext @byte() {
			return GetRuleContext<ByteContext>(0);
		}
		public EsBYTEContext(DirectivaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterEsBYTE(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitEsBYTE(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEsBYTE(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EsDirectivaContext : DirectivaContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public TipodirectivaContext tipodirectiva() {
			return GetRuleContext<TipodirectivaContext>(0);
		}
		public OpdirectivaContext opdirectiva() {
			return GetRuleContext<OpdirectivaContext>(0);
		}
		public EsDirectivaContext(DirectivaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.EnterEsDirectiva(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicestListener typedListener = listener as IsicestListener;
			if (typedListener != null) typedListener.ExitEsDirectiva(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicestVisitor<TResult> typedVisitor = visitor as IsicestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEsDirectiva(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectivaContext directiva() {
		DirectivaContext _localctx = new DirectivaContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_directiva);
		try {
			State = 101;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new ErrorDobleByteContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 86; Match(TIPOBYTE);
				State = 87; Match(TIPOBYTE);
				State = 88; @byte();
				}
				break;

			case 2:
				_localctx = new ErrorDobleDirectivaContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 89; tipodirectiva();
				State = 90; tipodirectiva();
				State = 91; opdirectiva();
				}
				break;

			case 3:
				_localctx = new EsBYTEContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 93; etiqueta();
				State = 94; Match(TIPOBYTE);
				State = 95; @byte();
				}
				break;

			case 4:
				_localctx = new EsDirectivaContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 97; etiqueta();
				State = 98; tipodirectiva();
				State = 99; opdirectiva();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
